[package]
name = "bumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
octocrab = "0.19.0"
cargo_toml = "0.15.2"
toml = "0.7.3"
serde = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"